--- a/contact 4.html
+++ b/contact 4.html
@@ -83,11 +83,11 @@
             </div>
             <div class="info-item">
                 <i class="fab fa-instagram"></i>
-                <a href="https://www.instagram.com/whoisjilbro?igsh=bWUwa3ZiN2p2ZW92" target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/shannyyii/profilecard/?igsh=MmFtc2x6YnBiZWk3" target="_blank">Instagram</a>
             </div>
             <div class="info-item">
                 <i class="fab fa-tiktok"></i>
-                <a href="https://www.tiktok.com/@aajils?_t=8qe71IwoZWi&_r=1" target="_blank">TikTok</a>
+                <a href="https://www.tiktok.com/@shann1704?_t=8qciPoI48j1&_r=1" target="_blank">TikTok</a>
             </div>
         </div>
     </div>
