--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
             <div class="card">
-                <img src="./images/shanny.png" alt="">
+                <img src="./images/ghibli 2.png" alt="">
                 <h3>Shanny Fauzi A</h3>
                 <a href="4.html">
                     <button class="more-btn">More</button>
