--- a/4.html
+++ b/4.html
@@ -68,7 +68,7 @@
     </p>
    </div>
    <div class="relative mt-8 lg:mt-0">
-    <img alt="Anime character with glasses and a blue scarf" class="rounded-full border-4 border-yellow-500" height="200" src="./images/shanny 3.png" width="200"/>
+    <img alt="Anime character with glasses and a blue scarf" class="rounded-full border-4 border-yellow-500" height="200" src="./images/ghibli.png" width="200"/>
     <div class="absolute inset-0 rounded-full border-4 border-yellow-500 animate-pulse">
     </div>
    </div>
