--- a/about 4.html
+++ b/about 4.html
@@ -91,7 +91,7 @@
   </div>
   <div class="content">
    <div class="about-card">
-    <img alt="Profile picture of a person standing in front of a tree with a scenic background" height="150" src="./images/shanny 3.png" width="150"/>
+    <img alt="Profile picture of a person standing in front of a tree with a scenic background" height="150" src="./images/ghibli.png" width="150"/>
     <div class="about-text">
      <h2>
       About Me
