--- a/about 1.html
+++ b/about 1.html
@@ -5,69 +5,104 @@
   </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   <style>
-   body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #ffffff;
+    /* Existing styles remain unchanged */
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #121212;
+        color: #ffffff;
+    }
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        background-color: #000000;
+    }
+    .navbar .logo {
+        font-size: 24px;
+        font-weight: bold;
+        color: #ffcc00;
+    }
+    .navbar .nav-links {
+        display: flex;
+        gap: 20px;
+        margin: 0 auto;
+    }
+    .navbar .nav-links a {
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 18px;
+    }
+    .navbar .nav-links a:hover,
+    .navbar .nav-links a.active {
+        color: #ffcc00;
+        text-decoration: underline;
+    }
+    .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 80px);
+    }
+    .about-card {
+        background-color: #1e1e1e;
+        padding: 20px;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        max-width: 800px;
+        width: 100%;
+        opacity: 0; /* Start hidden */
+        transform: translateY(20px); /* Start slightly down */
+        animation: fadeInUp 1s forwards; /* Apply animation */
+    }
+    .about-card img {
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+        opacity: 0; /* Start hidden */
+        transform: translateX(-100px); /* Start off-screen */
+        animation: slideIn 1s forwards; /* Apply animation */
+        animation-delay: 0.5s; /* Delay for image */
+    }
+    .about-card .about-text {
+        max-width: 600px;
+        opacity: 0; /* Start hidden */
+        animation: fadeIn 1s forwards; /* Apply animation */
+        animation-delay: 1s; /* Delay for text */
+    }
+    @keyframes slideIn {
+        from {
+            opacity: 0;
+            transform: translateX(-100px);
         }
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background-color: #000000;
+        to {
+            opacity: 1;
+            transform: translateX(0);
         }
-        .navbar .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #ffcc00;
+    }
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
         }
-        .navbar .nav-links {
-            display: flex;
-            gap: 20px;
-            margin: 0 auto;
+        to {
+            opacity: 1;
         }
-        .navbar .nav-links a {
-            color: #ffffff;
-            text-decoration: none;
-            font-size: 18px;
+    }
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
         }
-        .navbar .nav-links a:hover,
-        .navbar .nav-links a.active {
-            color: #ffcc00;
-            text-decoration: underline;
+        to {
+            opacity: 1;
+            transform: translateY(0);
         }
-        .content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: calc(100vh - 80px);
-        }
-        .about-card {
-            background-color: #1e1e1e;
-            padding: 20px;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            max-width: 800px;
-            width: 100%;
-        }
-        .about-card img {
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-            object-fit: cover;
-        }
-        .about-card .about-text {
-            max-width: 600px;
-        }
-        .about-card .about-text h2 {
-            margin: 0;
-            margin-bottom: 10px;
-        }
-  </style>
+    }
+</style>
  </head>
  <body>
   <div class="navbar">
