--- a/galery 1.html
+++ b/galery 1.html
@@ -4,61 +4,74 @@
    Gallery
   </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <style>
-   body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #fff;
+ <style>
+    body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #121212;
+        color: #fff;
+    }
+    .navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        background-color: #121212;
+    }
+    .navbar .logo {
+        font-size: 24px;
+        font-weight: bold;
+        color: #ffcc00;
+        margin-right: auto;
+    }
+    .navbar .menu {
+        display: flex;
+        justify-content: center;
+        flex-grow: 1;
+    }
+    .navbar .menu a {
+        margin: 0 20px;
+        text-decoration: none;
+        color: #fff;
+        font-size: 18px;
+    }
+    .navbar .menu a:hover,
+    .navbar .menu a.active {
+        color: #ffcc00;
+    }
+    .gallery {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        padding: 20px;
+    }
+    .gallery .item {
+        margin: 10px;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        opacity: 0; /* Start hidden */
+        transform: translateY(20px); /* Start slightly down */
+        animation: fadeInUp 0.5s forwards; /* Apply animation */
+    }
+    .gallery .item img {
+        display: block;
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+    }
+    @keyframes fadeInUp {
+        from {
+            opacity: 0;
+            transform: translateY(20px);
         }
-        .navbar {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            background-color: #121212;
+        to {
+            opacity: 1;
+            transform: translateY(0);
         }
-        .navbar .logo {
-            font-size: 24px;
-            font-weight: bold;
-            color: #ffcc00;
-            margin-right: auto;
-        }
-        .navbar .menu {
-            display: flex;
-            justify-content: center;
-            flex-grow: 1;
-        }
-        .navbar .menu a {
-            margin: 0 20px;
-            text-decoration: none;
-            color: #fff;
-            font-size: 18px;
-        }
-        .navbar .menu a:hover,
-        .navbar .menu a.active {
-            color: #ffcc00;
-        }
-        .gallery {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-            padding: 20px;
-        }
-        .gallery .item {
-            margin: 10px;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .gallery .item img {
-            display: block;
-            width: 300px;
-            height: 300px;
-            object-fit: cover;
-        }
-  </style>
+    }
+</style>
  </head>
  <body>
   <div class="navbar">
